updated javascript code but still incomplete

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Question Time</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,10 +15,9 @@
 
     <h2> Score : <span id="score"></span> </h2>
 
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
-
 <footer>
-    <!--Insert footer details here-->
+<!--Insert footer details here-->
 </footer>
 </html>
