further JS code developed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Lets play another generic quiz show!</h1>
+    <h1>Welcome to Front end Foxes<br>Beginner pop quiz!</h1>
     <div id="game"></div>
 
     <h2> Score : <span id="score"></span> </h2>
